<resources>
    <string name="app_name">Klass.</string>
    <string name="profile">Профиль</string>
    <string name="main">Главная</string>
    <string name="onlineNotes">Заметки</string>
    <string name="tests">Тесты</string>
    <string name="contacts">Контакты</string>
    <string name="settings">Настройки</string>
    <string name="recreation">Переменка</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the
        camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low
        device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="СохранитьQR">Сохранить QR</string>
    <string name="telegram">Telegram</string>
    <string name="gmail">Gmail</string>
    <string name="contactDev">Связаться с разработчиком можно в:</string>
    <string name="discord">Discord</string>
    <string name="vk">ВКонтакте</string>
    <string name="instagram">Instagram</string>
    <string name="LifeAtSpace">Life at Space</string>
    <string name="las_desc">Где-то далеко есть Перпендикулярная Вселенная. В ней обитают странные существа, ведущие скромный образ перпендикулярной жизни.
Твоя задача - исследовать этот мир, параллельно атакуя других жителей и накапливая Искромётные значки.

Внутренний мир игры чрезвычайно прост и понятен:
- активируй ключи (выпадают разрешения на атаки, защита от атак, ювики, случайные объекты, коллекционные карточки, штампы исследования) - они копятся сами, 1 шт в 5 минут (до 50 шт.)
- повышай уровень своей базы (за объекты)
- проводи исследования объектов (за штампы исследований с шансом успеха в 35%)
- собирай коллекционные карточки
- атакуй других жителей, за победу получая искромётные значки и продвигаясь вверх по ТОПу жителей: в атаке учитывается уровень базы, количество завершённых исследований и собранные коллекционные карточки</string>
    <string name="astronomyTerm">Астроно́мия (от др.-греч. ἄστρον «звезда» и νόμος «закон») — наука о Вселенной, изучающая расположение, движение, структуру, происхождение и развитие небесных тел и систем.</string>
    <string name="geometryTerm">Геоме́трия — раздел математики, изучающий пространственные структуры и отношения, а также их обобщения. Геометрия как систематическая наука появилась в Древней Греции, её аксиоматические построения описаны в «Началах» Евклида.</string>
    <string name="saveQRbutton">Сохранить QR</string>
    <string name="showSolarSystemButton">Посмотреть Солнечную систему в AR</string>
    <string name="findARSurfaceButton">Заново найти поверхность</string>
    <string name="saveAndContinueButton">Сохранить и продолжить</string>
    <string name="openTestEditor">Открыть редактор теста</string>
    <string name="enterButton">Войти</string>
    <string name="createNewAccountButton">Создать новый аккаунт</string>
    <string name="radioBTNteacher">Я учитель</string>
    <string name="radioBTNpupil">Я ученик(-ца)</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="addPupil">Добавить ученика</string>
    <string name="openEditor">Открыть редактор тестов</string>
    <string name="addMessageToGroup">Добавить сообщение для группы</string>
    <string name="add">Добавить</string>
    <string name="sync">Синхронизировать</string>
    <string name="download">Загрузить</string>
    <string name="getTest">Получить тест</string>
    <string name="endTest">Завершить тест</string>
    <string name="sendTest">Отправить тест</string>
    <string name="timerOff">Отключить таймер</string>
    <string name="exitAcc">Выйти из аккаунта</string>
    <string name="noteHint">Заметка</string>
    <string name="firstAnswerHint">Первый ответ</string>
    <string name="secondAnswerHint">Втрой ответ</string>
    <string name="thirdAnswerHint">Третий ответ</string>
    <string name="fourthAnswerHint">Четвёртый ответ</string>
    <string name="typeNoteNameHint">Введите название заметки</string>
    <string name="typeShortDescHint">Введите краткое описание</string>
    <string name="typeEmailHint">Введите e-mail</string>
    <string name="typePasswordHint">Введите пароль</string>
    <string name="typeNameHint">Имя</string>
    <string name="typeSurnameHint">Фамилия</string>
    <string name="typeTextHint">Введите текст</string>
    <string name="noteNameHint">Название заметка</string>
    <string name="testNameHint">Название теста</string>
    <string name="descTestHint">Описание теста</string>
    <string name="actualVersionHint">Актуальная версия:</string>
    <string name="onFigureClick">При нажатии на фигуру вы сразу же сможете увидеть её в AR</string>
    <string name="usePhoneToReadQR">Наведите второй телефон на QR-код, чтобы считать данные.</string>
    <string name="deleteQR">Вы действительно хотите удалить QR-код?</string>
    <string name="updateAppNotif">Пожалуйста, обновите приложение!</string>
    <string name="show_book_materials">Не показывать справочные материалы в заметках</string>
    <string name="quest_num">Номер вопроса:</string>
    <string name="answ_var">Варианты ответа:</string>
    <string name="enterText">Введите текст</string>
    <string name="dowloadLAS">Скачать можно, отсканировав QR-код или нажав на него</string>
    <string name="chooseTheme">Выберите тему:</string>
    <string name="installedVersion">Установленная версия приложения: </string>
    <string name="pleaseEnter">Выполните вход</string>
    <string name="registration">Регистрация</string>
    <string name="changesList">Список изменений:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="darkTheme">Тёмная тема</string>
    <string name="ar">AR</string>
    <string name="profileTheme">Тема для профиля:</string>
    <string name="searchHint">Поиск</string>
    <string name="shop">Магазин</string>
    <string name="buy">Купить</string>
    <string name="search">Search</string>
    <string name="fontSize">Размер шрифта</string>
    <string name="teacher">Учитель:</string>
    <string name="email">email:</string>
    <string name="teacherMessage">Сообщение от преподавателя:</string>
    <string name="testAvailable">Тест доступен</string>
    <string name="listPupil">Список учащихся:</string>
    <string name="scorePerAnsw">Количество баллов \n за правильный ответ:</string>
    <string name="scores">N баллов</string>
    <string name="min">мин</string>
    <string name="timeTest">Время прохождения теста:</string>
    <string name="ok_ru">Хорошо</string>
    <string name="google_maps_api_key">AIzaSyByhLOinHzF_1FGubCaXQAX4AJfVWo3qdc</string>
    <string name="passedDistance">Пройденное расстояние:</string>
    <string name="speed">Скорость:</string>
    <string name="getCoins">Получить койны</string>
    <string name="youGetCoins">Вы получите койнов:</string>
    <string name="privatePolicy">Политика конфиденциальности и условия использования</string>
    <string name="statistics">Статистика</string>
    <string name="averageTime">Среднее время прохождения тестов:</string>
    <string name="averageScore">Средний балл:</string>
</resources>