<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/round_notes_24"
            android:title="@string/onlineNotes" />

        <item
            android:id="@+id/nav_tests"
            android:icon="@drawable/round_check_box_24"
            android:title="@string/tests" />

        <item
            android:id="@+id/nav_games"
            android:icon="@drawable/round_videogame_asset_24"
            android:title="@string/recreation" />

        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/augmented_reality"
            android:title="@string/ar" />

        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/round_shopping_cart_24"
            android:title="@string/shop" />

        <item
            android:id="@+id/nav_todoList"
            android:icon="@drawable/round_playlist_add_check_24"
            android:title="ToDo лист" />

        <item
            android:id="@+id/nav_settings"
            android:title="Настройки"
            android:icon="@drawable/round_settings_24"
            />

    </group>

</menu>
