<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="300dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="?attr/background"

        android:orientation="vertical">

        <Button
            android:id="@+id/add"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:icon="@drawable/baseline_add_24"
            android:text="@string/add" />

        <Button
            android:id="@+id/sync"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:icon="@drawable/round_cloud_upload_24"
            android:text="@string/sync" />

        <Button
            android:id="@+id/download"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            app:icon="@drawable/round_cloud_download_24"
            android:text="@string/download" />
    </LinearLayout>
</FrameLayout>